update of missing part

--- a/DD/DD.tex
+++ b/DD/DD.tex
@@ -84,11 +84,13 @@ The other server deals with the managing of the requests by the private users or
 
 \begin{figure}[h]
 	\section{User interface design}
-Here it will shown the user interfaces with the help of UX diagrams. In particular there is shown the flow that the user will follow to navigate inside the application.Some aspects concerning the user interface design have been already treated in the "Requirement Analysis and Specification Document" and if the reader wants to understand in a better and more detailed way, he/she is strongly suggested to refer to it. 
+Here there will be shown the user interfaces with the help of UX diagrams. In particular there is shown the flow that the user will follow to navigate inside the application.Some aspects concerning the user interfaces design have been already treated in the "Requirement Analysis and Specification Document",if the reader wants to understand in a better and more detailed way, he/she is strongly suggested to refer also to it.
 UX diagrams:\\
 	\includegraphics[scale=0.48]{Diagrams/UX diagram.png}
-	\caption{Deployment diagram}
+	\caption{UX diagram}
 \end{figure}
 \FloatBarrier
+
+
 
 \end{document}
